# async-io-comparison

./: .gitignore  README.md
.github/workflows/: ci.yml  dotnet-core.yml
c#-async-io/: Program.cs  c#-async-io.csproj
go-async-io/: .gitignore  app.go
rust-async-io/: Cargo.toml
rust-async-io/src/: main.rs
