[package]
name = "rust-async-io"
version = "0.1.0"
authors = ["Stephen Newman <steve@newman.digital>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.0"
reqwest = {version = "0.10.0-alpha.1", features = ["json"]}
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
